unpackaged/main/default/objects/Metric_Value__c/Metric_Value__c.object-meta.xml
<CustomObject>
    <label>Metric Value</label>
    <nameField>
        <displayFormat>MetricValue-{0000}</displayFormat>
        <label>Metric Values Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Metric Values</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>