unpackaged/main/default/objects/Metric_Value__c/fields/Data_Type__c.field-meta.xml
<CustomField>
    <fullName>Data_Type__c</fullName>
    <label>Data Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>