unpackaged/main/default/objects/Metric_Value__c/fields/Metric_Definition__c.field-meta.xml
<CustomField>
    <fullName>Metric_Definition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Metric Definition</label>
    <referenceTo>Metric_Definition__c</referenceTo>
    <relationshipLabel>Metric Values</relationshipLabel>
    <relationshipName>Metric_Values</relationshipName>
    <type>Lookup</type>
</CustomField>